# catlass

./: CMakeLists.txt
.agents/skills/catlass-example-to-pytest/: DESIGN.md  SKILL.md
.github/workflows/: build-release.yml  sync-upstream.yml
tests/: run_optest.sh
tests/optest/: .gitignore  CMakeLists.txt  README.md  build.sh  pyproject.toml
tests/optest/cmake/: jit_template_wrapper.asc  jit_try_compile_check.cmake
tests/optest/docs/: design.md
tests/optest/include/: catlass_kernel.h  catlass_kernel_jit.h  catlass_kernel_prebuilt.h  catlass_torch.h
tests/optest/kernels/: CMakeLists.txt
tests/optest/kernels/00_basic_matmul/: CMakeLists.txt  basic_matmul.cpp  basic_matmul_impl.cpp
tests/optest/kernels/common/: common.h
tests/optest/kernels/include/: jit_compiler.h  jit_config.h  jit_logger.h  jit_macro_generator.h  jit_macros.h  jit_util.h
tests/optest/kernels/jit/: jit_compiler.cpp  jit_logger.cpp  jit_util.cpp
tests/optest/src/: CMakeLists.txt  catlass_torch.cpp
tests/optest/src/common/: workspace.cpp
tests/optest/src/include/common/: register.h  run_npu_func.h  workspace.h
tests/optest/src/include/template/: matmul.h
tests/optest/tests/: test_00_basic_matmul.py
tests/optest/torch_catlass/: __init__.py
tests/optest/torch_catlass/ops/: __init__.py  basic_matmul.py
tests/optest/utils/: CMakeLists.txt  kernel_utils.cpp  torch_utils.cpp  type_utils.hpp
tests/optest/utils/include/: kernel_utils.h  torch_utils.h
